--- a/projects/index.html
+++ b/projects/index.html
@@ -26,8 +26,7 @@
                 <h3>Inter-Chat <span class="coming-soon">(Coming Soon)</span></h3>
                 <p>Chat with AI models in real-time.</p>
                 <p><strong>Tech:</strong> AI, Chat, Real-time</p>
-                <a href="https://github.com/manugeni" target="_blank">GitHub</a>
-                <a href="https://github.com/manugeni/Inter-Chat/" target="_blank">Hugging Face</a>
+                <a href="https://github.com/manugeni/Inter-Chat/" target="_blank">GitHub</a>
             </div>
             <div class="project">
                 <h3>Vault Engine <span class="coming-soon">(Coming Soon)</span></h3>
