--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </header>
         
         <section class="profile">
-            <img src="/data/images/Profile_Logo.png" alt="Rendani's Profile" class="profile-image">
+            <img src="/data/images/Profile_Logo.jpg" alt="Rendani's Profile" class="profile-image">
             <h1>Rendani</h1>
             <p>I'm a passionate developer who loves programming and staying fit through exercise. I create innovative projects that solve real-world problems while exploring new technologies.</p>
             <div class="socials">
