--- a/index.html
+++ b/index.html
@@ -204,16 +204,12 @@
         <header>
             <img src="/data/images/Logo.png" alt="Rendani's Logo" class="logo">
             <nav class="socials">
-                <a href="https://github.com/manugeni" target="_blank">GitHub</a>
-                <a href="https://facebook.com/callmerendani" target="_blank">Facebook</a>
-                <a href="https://x.com/callmerendani" target="_blank">X</a>
-                <a href="https://huggingface.co/manugeni" target="_blank">HuggingFace</a>
                 <a href="/contact/">Contact Me</a>
             </nav>
         </header>
         
         <section class="profile">
-            <img src="/data/images/Profile_Logo.jpg" alt="Rendani's Profile" class="profile-image">
+            <img src="/data/images/Profile_Logo.png" alt="Rendani's Profile" class="profile-image">
             <h1>Rendani</h1>
             <p>I'm a passionate developer who loves programming and staying fit through exercise. I create innovative projects that solve real-world problems while exploring new technologies.</p>
             <div class="socials">
@@ -221,7 +217,6 @@
                 <a href="https://facebook.com/callmerendani" target="_blank">Facebook</a>
                 <a href="https://x.com/callmerendani" target="_blank">X</a>
                 <a href="https://huggingface.co/manugeni" target="_blank">HuggingFace</a>
-                <a href="https://create.xyz/manugeni" target="_blank">Create.xyz</a>
             </div>
         </section>
         
