--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/data/images/favicon.png">
-    <title>Welcome | Rendani - Porfolion</title>
+    <title>Welcome | Rendani - Portfolio</title>
     <style>
         * {
             margin: 0;
