--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-content">
-                        <h3 class="project-title">SlayGame</h3>
-                        <p class="project-description">A creative gaming project that showcases my game development skills and innovative design concepts.</p>
+                        <h3 class="project-title">Slay!</h3>
+                        <p class="project-description">A web-based slayer game where you fight against waves of enemies!</p>
+                        <a href="https://manugeni.is-a.dev/slay-game/" class="project-link" target="_blank">Play</a>
                         <a href="https://github.com/manugeni/SlayGame" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
