--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Slay!</h3>
                         <p class="project-description">A web-based slayer game where you fight against waves of enemies!</p>
-                        <a href="https://manugeni.is-a.dev/slay-game/" class="project-link" target="_blank">Play</a>
+                        <a href="/slay-game/" class="project-link" target="_blank">Play</a>
                         <a href="https://github.com/manugeni/SlayGame" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
