--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-content">
-                        <h3 class="project-title">Slay!</h3>
+                        <h3 class="project-title">RETRO SLAYER</h3>
                         <p class="project-description">A web-based slayer game where you fight against waves of enemies!</p>
                         <a href="/slay-game/" class="project-link" target="_blank">Play</a>
                         <a href="https://github.com/manugeni/slay-game/" class="project-link" target="_blank">View on GitHub</a>
