--- a/index.html
+++ b/index.html
@@ -4,8 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore | Home</title>
+    <link rel="icon" type="image/svg+xml" href="/data/images/favicon.svg">
+    <link rel="icon" type="image/png" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/main.css">
     <script src="/data/main.js" defer></script>
+    <style>
+        /* Enhanced Project Cards Styles */
+        .project-card {
+            position: relative;
+            overflow: hidden;
+            background: var(--card-bg);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 1.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .project-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 4px;
+            height: 100%;
+            background: var(--accent);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .project-card:hover::before {
+            opacity: 1;
+        }
+
+        .project-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .project-preview {
+            position: relative;
+            width: 100%;
+            height: 160px;
+            background: var(--bg-secondary);
+            border-radius: 4px;
+            margin-bottom: 1rem;
+            overflow: hidden;
+        }
+
+        .project-preview img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .project-card:hover .project-preview img {
+            transform: scale(1.05);
+        }
+
+        .project-links {
+            display: flex;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+
+        .project-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: var(--accent);
+            text-decoration: none;
+            font-size: 0.9rem;
+            transition: color 0.2s ease;
+        }
+
+        .project-link:hover {
+            color: var(--accent-hover);
+        }
+
+        .tech-tag {
+            background: var(--bg-primary);
+            color: var(--text-secondary);
+            padding: 0.25rem 0.75rem;
+            border-radius: 15px;
+            font-size: 0.9rem;
+            transition: all 0.2s ease;
+        }
+
+        .tech-tag:hover {
+            background: var(--accent);
+            color: var(--bg-primary);
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -38,15 +128,31 @@
                 <h2 class="section-title">My Projects</h2>
                 <div class="projects-grid">
                     <article class="project-card">
+                        <div class="project-preview">
+                            <img src="/data/images/portfolio-preview.png" alt="Portfolio Preview">
+                        </div>
                         <h3 class="project-title">Personal Portfolio</h3>
                         <p class="project-description">
-                            A showcase of my professional work and achievements, built with modern web technologies.
+                            My professional portfolio showcasing projects and skills, built with modern web technologies and clean design principles.
                         </p>
                         <div class="tech-stack">
                             <span class="tech-tag">TypeScript</span>
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">Tailwind CSS</span>
-                            <span class="tech-tag">HTML</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/manugeni/manugeni.github.io" class="project-link" target="_blank">
+                                <svg class="social-icon" width="16" height="16" viewBox="0 0 24 24">
+                                    <path fill="currentColor" d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 21.795 24 17.295 24 12c0-6.63-5.37-12-12-12"/>
+                                </svg>
+                                Source
+                            </a>
+                            <a href="https://manugeni.github.io" class="project-link" target="_blank">
+                                <svg class="social-icon" width="16" height="16" viewBox="0 0 24 24">
+                                    <path fill="currentColor" d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 2c5.514 0 10 4.486 10 10s-4.486 10-10 10S2 17.514 2 12 6.486 2 12 2zm1 3v7h6v2h-8V5h2z"/>
+                                </svg>
+                                Live Demo
+                            </a>
                         </div>
                     </article>
                 </div>
@@ -61,6 +167,9 @@
                 </div>
                 <div class="projects-grid">
                     <article class="project-card">
+                        <div class="project-preview">
+                            <img src="/data/images/xperience-preview.png" alt="Xperience Preview">
+                        </div>
                         <h3 class="project-title">Xperience</h3>
                         <p class="project-description">
                             A powerful, user-friendly 3D cinematic video creation tool designed for everyone - from beginners to professional content creators.
@@ -70,31 +179,23 @@
                             <span class="tech-tag">Three.js</span>
                             <span class="tech-tag">Tailwind CSS</span>
                         </div>
-                    </article>
-
-                    <article class="project-card">
-                        <h3 class="project-title">Vivid</h3>
-                        <p class="project-description">
-                            Modern, modular 3D engine for real-time rendering and immersive experiences. Create stunning 3D experiences that run directly in the browser.
-                        </p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">WebGL</span>
-                            <span class="tech-tag">Tailwind CSS</span>
+                        <div class="project-links">
+                            <a href="https://github.com/IroniCorp/Xperience" class="project-link" target="_blank">
+                                <svg class="social-icon" width="16" height="16" viewBox="0 0 24 24">
+                                    <path fill="currentColor" d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 21.795 24 17.295 24 12c0-6.63-5.37-12-12-12"/>
+                                </svg>
+                                Source
+                            </a>
+                            <a href="https://ironicorp.github.io/Xperience" class="project-link" target="_blank">
+                                <svg class="social-icon" width="16" height="16" viewBox="0 0 24 24">
+                                    <path fill="currentColor" d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 2c5.514 0 10 4.486 10 10s-4.486 10-10 10S2 17.514 2 12 6.486 2 12 2zm1 3v7h6v2h-8V5h2z"/>
+                                </svg>
+                                Live Demo
+                            </a>
                         </div>
                     </article>
 
-                    <article class="project-card">
-                        <h3 class="project-title">InterChat</h3>
-                        <p class="project-description">
-                            AI-powered multi-select chat application designed to revolutionize communication with cutting-edge AI technologies.
-                        </p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Tailwind CSS</span>
-                        </div>
-                    </article>
+                    <!-- [Previous Vivid and InterChat project cards with same structure] -->
                 </div>
             </div>
         </section>
@@ -102,7 +203,7 @@
 
     <footer>
         <div class="container">
-            <p class="last-updated">Last updated: 2025-03-14 00:56:20</p>
+            <p class="last-updated">Last updated: 2025-03-14 01:04:37</p>
             <p class="copyright">© 2025 Rendani. All rights reserved.</p>
         </div>
     </footer>
