--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     </svg>
                     X (Twitter)
                 </a>
+                <a href="/contact/">Contact Me</a>
             </div>
         </div>
     </header>
