--- a/index.html
+++ b/index.html
@@ -3,131 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rendani | Software Developer</title>
-    <link rel="icon" type="image/svg+xml" href="/data/images/favicon.svg">
-    <link rel="icon" type="image/png" href="/data/images/favicon.png">
-    <link rel="stylesheet" href="/data/main.css">
-    <script src="/data/main.js" defer></script>
+    <title>Explore | Rendani- Developer</title>
+    <link rel="stylesheet" href="/data/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="background-animation"></div>
+    
     <header>
-        <div class="container">
-            <div class="logo-container">
-                <img src="/data/images/Logo.png" alt="Rendani's Logo" class="logo">
-            </div>
-            <h1>Rendani</h1>
-            <p class="subtitle">Software Developer & Professional</p>
-            <div class="social-links">
-                <a href="https://github.com/manugeni" target="_blank" rel="noopener noreferrer">
-                    <svg class="social-icon" viewBox="0 0 24 24">
-                        <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 21.795 24 17.295 24 12c0-6.63-5.37-12-12-12"/>
-                    </svg>
-                    GitHub
-                </a>
-                <a href="https://x.com/callmerendani" target="_blank" rel="noopener noreferrer">
-                    <svg class="social-icon" viewBox="0 0 24 24">
-                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                    </svg>
-                    X (Twitter)
-                </a>
-                <a href="/contact/">Contact Me</a>
-            </div>
-        </div>
+        <nav>
+            <div class="logo">RM</div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section class="section">
+        <section id="home" class="hero">
             <div class="container">
-                <h2 class="section-title">My Projects</h2>
-                <div class="projects-grid">
-                    <article class="project-card">
-                        <h3 class="project-title">Portfolio</h3>
-                        <p class="project-description">
-                            Professional portfolio website built with modern web technologies.
-                        </p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Tailwind CSS</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/manugeni/manugeni.github.io" class="project-link">
-                                Source
-                            </a>
-                        </div>
-                    </article>
+                <h1 class="glitch-text">Manugeni</h1>
+                <p class="subtitle">Developer & Creator</p>
+                <div class="social-links">
+                    <a href="https://github.com/manugeni" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
 
-        <section class="organization-section">
+        <section id="projects" class="projects">
+            <h2>Projects</h2>
+            <div class="projects-grid" id="projects-container">
+                <!-- Projects will be dynamically loaded here -->
+            </div>
+        </section>
+
+        <section id="about" class="about">
             <div class="container">
-                <div class="organization-header">
-                    <img src="https://avatars.githubusercontent.com/u/202463140?v=4" alt="IroniCorp" class="organization-logo">
-                    <h2 class="section-title">IroniCorp Projects</h2>
-                </div>
-                <div class="projects-grid">
-                    <article class="project-card">
-                        <h3 class="project-title">Xperience</h3>
-                        <p class="project-description">
-                            3D cinematic video creation tool for professional content creators.
-                        </p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">Three.js</span>
-                            <span class="tech-tag">WebGL</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/IroniCorp/Xperience" class="project-link">
-                                Source
-                            </a>
-                        </div>
-                    </article>
-
-                    <article class="project-card">
-                        <h3 class="project-title">Vivid</h3>
-                        <p class="project-description">
-                            Modern, modular 3D engine for real-time rendering and immersive experiences.
-                        </p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">WebGL</span>
-                            <span class="tech-tag">Three.js</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/IroniCorp/Vivid" class="project-link">
-                                Source
-                            </a>
-                        </div>
-                    </article>
-
-                    <article class="project-card">
-                        <h3 class="project-title">InterChat</h3>
-                        <p class="project-description">
-                            AI-powered multi-select chat application with cutting-edge features.
-                        </p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">AI</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/IroniCorp/InterChat" class="project-link">
-                                Source
-                            </a>
-                        </div>
-                    </article>
-                </div>
+                <h2>About Me</h2>
+                <p>Developer passionate about creating modern and efficient solutions.</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <div class="container">
-            <p class="last-updated">Last updated: 2025-03-14 01:15:14</p>
-            <p class="author">Created by <a href="https://github.com/manugeni">@manugeni</a></p>
-            <p class="copyright">© 2025 Rendani</p>
-        </div>
+        <p>&copy; 2025 Manugeni. All rights reserved.</p>
     </footer>
+
+    <script src="/data/js/main.js"></script>
 </body>
 </html>
