--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore | Rendani - Developer</title>
+    <title>Rendani | Developer</title>
     <link rel="stylesheet" href="/data/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="/data/images/favicon.png">
 </head>
 <body>
     <div class="background-animation"></div>
     
     <header>
         <nav>
-            <div class="logo">RM</div>
+            <div class="logo">
+                <a href="/">
+                    <img src="/data/images/Logo.png" alt="Rendani Logo" width="48" height="48">
+                </a>
+            </div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="/contact/">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,10 +30,12 @@
     <main>
         <section id="home" class="hero">
             <div class="container">
-                <h1 class="glitch-text">Manugeni</h1>
+                <h1 class="glitch-text">Rendani</h1>
                 <p class="subtitle">Developer & Creator</p>
                 <div class="social-links">
-                    <a href="https://github.com/manugeni" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/manugeni" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://x.com/CallMeRendani" target="_blank" title="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://youtube.com/@CallMeRendani" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </section>
@@ -42,13 +50,13 @@
         <section id="about" class="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Developer passionate about creating modern and efficient solutions.</p>
+                <p>Hi, I'm Rendani! A passionate developer focused on creating innovative solutions and engaging content.</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Manugeni. All rights reserved.</p>
+        <p>&copy; 2025 Rendani. All rights reserved.</p>
     </footer>
 
     <script src="/data/js/main.js"></script>
