--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="logo">
                 <a href="/">
-                    <img src="/data/images/Logo.png" alt="Rendani Logo" width="48" height="48">
+                    <img src="/data/images/Logo.png" alt="Rendani Logo">
                 </a>
             </div>
             <ul>
