--- a/contact/index.html
+++ b/contact/index.html
@@ -24,51 +24,68 @@
                 <li><a href="/#about">About</a></li>
                 <li><a href="/contact/" class="active">Contact</a></li>
             </ul>
+            <div class="datetime">
+                <span id="current-time">2025-03-15 23:08:47 UTC</span>
+            </div>
         </nav>
     </header>
 
     <main>
         <section class="contact-section">
             <div class="container">
-                <h1>Get in Touch</h1>
+                <h1>Contact Me</h1>
                 <div class="contact-content">
-                    <div class="contact-social">
-                        <h2>Connect With Me</h2>
-                        <div class="social-grid">
-                            <a href="https://github.com/manugeni" target="_blank" class="social-card">
-                                <i class="fab fa-github"></i>
-                                <span>GitHub</span>
-                                <span class="username">@manugeni</span>
-                            </a>
-                            <a href="https://x.com/CallMeRendani" target="_blank" class="social-card">
-                                <i class="fab fa-x-twitter"></i>
-                                <span>X (Twitter)</span>
-                                <span class="username">@CallMeRendani</span>
-                            </a>
-                            <a href="https://youtube.com/@CallMeRendani" target="_blank" class="social-card">
-                                <i class="fab fa-youtube"></i>
-                                <span>YouTube</span>
-                                <span class="username">@CallMeRendani</span>
-                            </a>
+                    <div class="contact-info">
+                        <div class="social-links-container">
+                            <h2>Connect</h2>
+                            <div class="social-grid">
+                                <a href="https://github.com/manugeni" target="_blank" class="social-card github">
+                                    <div class="icon-wrapper">
+                                        <i class="fab fa-github"></i>
+                                    </div>
+                                    <div class="social-info">
+                                        <span class="platform">GitHub</span>
+                                        <span class="username">@manugeni</span>
+                                    </div>
+                                </a>
+                                <a href="https://x.com/CallMeRendani" target="_blank" class="social-card twitter">
+                                    <div class="icon-wrapper">
+                                        <i class="fab fa-x-twitter"></i>
+                                    </div>
+                                    <div class="social-info">
+                                        <span class="platform">X (Twitter)</span>
+                                        <span class="username">@CallMeRendani</span>
+                                    </div>
+                                </a>
+                                <a href="https://youtube.com/@CallMeRendani" target="_blank" class="social-card youtube">
+                                    <div class="icon-wrapper">
+                                        <i class="fab fa-youtube"></i>
+                                    </div>
+                                    <div class="social-info">
+                                        <span class="platform">YouTube</span>
+                                        <span class="username">@CallMeRendani</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="contact-form">
-                        <h2>Send a Message</h2>
-                        <form action="https://formspree.io/f/movjgeaw" method="POST">
+                    <div class="contact-form-container">
+                        <h2>Send Message</h2>
+                        <form action="https://formspree.io/f/movjgeaw" method="POST" class="contact-form">
                             <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" id="name" name="name" required>
+                                <input type="text" id="name" name="name" required placeholder="Your Name">
                             </div>
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" required>
+                                <input type="email" id="email" name="email" required placeholder="Your Email">
                             </div>
                             <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message" rows="5" required></textarea>
+                                <textarea id="message" name="message" rows="5" required placeholder="Your Message"></textarea>
                             </div>
-                            <button type="submit" class="submit-btn">Send Message</button>
+                            <button type="submit" class="submit-btn">
+                                <span>Send Message</span>
+                                <i class="fas fa-paper-plane"></i>
+                            </button>
                         </form>
                     </div>
                 </div>
@@ -80,6 +97,23 @@
         <p>&copy; 2025 Rendani. All rights reserved.</p>
     </footer>
 
+    <script>
+        // Update current time
+        function updateTime() {
+            const now = new Date();
+            const formatted = now.getUTCFullYear() + '-' + 
+                            String(now.getUTCMonth() + 1).padStart(2, '0') + '-' +
+                            String(now.getUTCDate()).padStart(2, '0') + ' ' +
+                            String(now.getUTCHours()).padStart(2, '0') + ':' +
+                            String(now.getUTCMinutes()).padStart(2, '0') + ':' +
+                            String(now.getUTCSeconds()).padStart(2, '0') + ' UTC';
+            document.getElementById('current-time').textContent = formatted;
+        }
+
+        // Update time every second
+        updateTime();
+        setInterval(updateTime, 1000);
+    </script>
     <script src="/data/js/main.js"></script>
 </body>
 </html>
