--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="subtitle">Developer & Creator</p>
                 <div class="social-links">
                     <a href="https://github.com/manugeni" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="https://x.com/CallMeRendani" target="_blank" title="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://twitter.com/CallMeRendani" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
                     <a href="https://youtube.com/@CallMeRendani" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
