--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>manugeni</title>
     <link rel="stylesheet" href="/data/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="/data/images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/data/images/favicon.png">
 </head>
 <body>
     <div class="terminal-overlay"></div>
     
     <header>
         <div class="system-info">
-            <div class="datetime" id="current-time">2025-03-15 23:19:06 UTC</div>
-            <div class="user-info">@manugeni</div>
+            <div class="info-line">Current Date and Time (UTC - YYYY-MM-DD HH:MM:SS formatted): <span id="current-time">2025-03-15 23:22:43</span></div>
+            <div class="info-line">Current User's Login: manugeni</div>
         </div>
     </header>
 
@@ -38,9 +37,9 @@
                 <a href="/contact">contact</a>
             </nav>
             <div class="social-links">
-                <a href="https://github.com/manugeni" target="_blank" title="GitHub">github</a>
-                <a href="https://twitter.com/CallMeRendani" target="_blank" title="Twitter">twitter</a>
-                <a href="https://youtube.com/@CallMeRendani" target="_blank" title="YouTube">youtube</a>
+                <a href="https://github.com/manugeni" target="_blank">github</a>
+                <a href="https://twitter.com/CallMeRendani" target="_blank">twitter</a>
+                <a href="https://youtube.com/@CallMeRendani" target="_blank">youtube</a>
             </div>
         </section>
 
@@ -61,7 +60,7 @@
                             String(now.getUTCDate()).padStart(2, '0') + ' ' +
                             String(now.getUTCHours()).padStart(2, '0') + ':' +
                             String(now.getUTCMinutes()).padStart(2, '0') + ':' +
-                            String(now.getUTCSeconds()).padStart(2, '0') + ' UTC';
+                            String(now.getUTCSeconds()).padStart(2, '0');
             document.getElementById('current-time').textContent = formatted;
         }
 
@@ -96,7 +95,7 @@
 
             if (!isDeleting && charIndex === currentPhrase.length) {
                 isDeleting = true;
-                typingSpeed = 2000; // Pause at the end
+                typingSpeed = 2000;
             } else if (isDeleting && charIndex === 0) {
                 isDeleting = false;
                 phraseIndex = (phraseIndex + 1) % phrases.length;
@@ -105,11 +104,7 @@
             setTimeout(typeText, typingSpeed);
         }
 
-        document.addEventListener('DOMContentLoaded', () => {
-            typeText();
-            loadProjects();
-        });
-
+        // Load projects
         async function loadProjects() {
             try {
                 const response = await fetch('https://api.github.com/users/manugeni/repos?sort=updated&per_page=6');
@@ -137,6 +132,11 @@
                 console.error('Error loading projects:', error);
             }
         }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            typeText();
+            loadProjects();
+        });
     </script>
 </body>
 </html>
