--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <a href="/contact">contact</a>
             </nav>
             <div class="social-links">
-                <a href="https://github.com/manugeni" target="_blank">github</a>
-                <a href="https://twitter.com/CallMeRendani" target="_blank">twitter</a>
-                <a href="https://youtube.com/@CallMeRendani" target="_blank">youtube</a>
+                <a href="https://github.com/mkblane" target="_blank">github</a>
+                <a href="https://x.com/mkblane" target="_blank">twitter</a>
+                <a href="https://youtube.com/@mkblane" target="_blank">youtube</a>
             </div>
         </section>
 
