--- a/404.html
+++ b/404.html
@@ -5,24 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - manugeni</title>
     <link rel="stylesheet" href="/data/css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/data/images/favicon.png">
+    <meta name="description" content="404 - Page Not Found">
 </head>
 <body>
-    <div class="terminal-overlay"></div>
-    
     <header>
         <div class="system-info">
-            <div class="info-line">Current Date and Time (UTC - YYYY-MM-DD HH:MM:SS formatted): <span id="current-time">2025-03-15 23:36:46</span></div>
-            <div class="info-line">Current User's Login: manugeni</div>
+            <div class="info-line">manugeni</div>
+            <div class="info-line" id="current-time"></div>
         </div>
     </header>
 
     <main>
         <section class="error-section">
-            <div class="page-content">
-                <div class="error-content">
-                    <pre class="ascii-art">
+            <div class="error-content">
+                <pre class="ascii-art">
      _____   ___  _  _    
     |  __ \ / _ \| || |   
     | |  | | | | | || |_  
@@ -30,22 +28,12 @@
     | |__| | |_| |  | |   
     |_____/ \___/   |_|   
                           
-    </pre>
-                    <h1>> page not found</h1>
-                    <div class="terminal-line">
-                        <span class="prompt">$</span> Error: The requested file could not be found
-                    </div>
-                    <div class="terminal-line">
-                        <span class="prompt">$</span> Available commands:
-                    </div>
-                    <div class="commands">
-                        <a href="/" class="command-link">
-                            <span class="prompt">$</span> cd /home
-                        </a>
-                        <a href="/contact" class="command-link">
-                            <span class="prompt">$</span> cd /contact
-                        </a>
-                    </div>
+</pre>
+                <h1>Page Not Found</h1>
+                <p class="error-message">The page you're looking for doesn't exist or has been moved.</p>
+                <div class="commands">
+                    <a href="/" class="command-link">Return Home</a>
+                    <a href="/contact" class="command-link">Contact</a>
                 </div>
             </div>
         </section>
@@ -54,13 +42,12 @@
     <script>
         function updateTime() {
             const now = new Date();
-            const formatted = now.getUTCFullYear() + '-' + 
-                            String(now.getUTCMonth() + 1).padStart(2, '0') + '-' +
-                            String(now.getUTCDate()).padStart(2, '0') + ' ' +
-                            String(now.getUTCHours()).padStart(2, '0') + ':' +
-                            String(now.getUTCMinutes()).padStart(2, '0') + ':' +
-                            String(now.getUTCSeconds()).padStart(2, '0');
-            document.getElementById('current-time').textContent = formatted;
+            const options = { 
+                hour: '2-digit', 
+                minute: '2-digit',
+                hour12: false
+            };
+            document.getElementById('current-time').textContent = now.toLocaleTimeString([], options);
         }
 
         updateTime();
