Update contact page with new title and social media links. Changed references from 'manugeni' to 'rendani' and updated GitHub, Twitter, and YouTube links to reflect new username '@mkblane'.

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - manugeni</title>
+    <title>Contact - rendani</title>
     <link rel="stylesheet" href="/data/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/data/images/favicon.png">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="system-info">
-            <div class="info-line">manugeni</div>
+            <div class="info-line">rendani manugeni | developer && creator</div>
             <div class="info-line" id="current-time"></div>
         </div>
     </header>
@@ -32,17 +32,17 @@
                     <div class="social-links-container">
                         <h2>Social Links</h2>
                         <div class="social-links-list">
-                            <a href="https://github.com/manugeni" target="_blank" rel="noopener noreferrer" class="social-link">
+                            <a href="https://github.com/mkblane" target="_blank" rel="noopener noreferrer" class="social-link">
                                 <span class="social-platform">GitHub</span>
-                                <span class="social-username">@manugeni</span>
+                                <span class="social-username">@mkblane</span>
                             </a>
-                            <a href="https://twitter.com/CallMeRendani" target="_blank" rel="noopener noreferrer" class="social-link">
+                            <a href="https://twitter.com/mkblane" target="_blank" rel="noopener noreferrer" class="social-link">
                                 <span class="social-platform">Twitter</span>
-                                <span class="social-username">@CallMeRendani</span>
+                                <span class="social-username">@mkblane</span>
                             </a>
-                            <a href="https://youtube.com/@CallMeRendani" target="_blank" rel="noopener noreferrer" class="social-link">
+                            <a href="https://youtube.com/@mkblane" target="_blank" rel="noopener noreferrer" class="social-link">
                                 <span class="social-platform">YouTube</span>
-                                <span class="social-username">@CallMeRendani</span>
+                                <span class="social-username">@mkblane</span>
                             </a>
                         </div>
                     </div>
